--- a/Analytics/SharedFileOverSafeLinkToExternalUser.yaml
+++ b/Analytics/SharedFileOverSafeLinkToExternalUser.yaml
@@ -17,7 +17,7 @@ query: |
 entityMappings:
 - entityType: Account
   fieldMappings:
-  - identifier: AadUserId
+  - identifier: FullName
     columnName: UserId
 - entityType: IP
   fieldMappings:
